third_party/llvm-project/llvm/test/MC/AArch64/SME/smstop-diagnostics.s
// RUN: not llvm-mc -triple=aarch64 -show-encoding -mattr=+sme 2>&1 < %s| FileCheck %s

// ------------------------------------------------------------------------- //
// Invalid keyword

smstop foo
// CHECK: [[@LINE-1]]:{{[0-9]+}}: error: invalid operand for instruction
// CHECK-NEXT: smstop foo
// CHECK-NOT: [[@LINE-1]]:{{[0-9]+}}:
